main_app/static/css/home.css
.section {
  min-height: 100vh;
}

#home, .about-card, #about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#home {
  margin: 0px 25px;
}

#about {
  /* background-color: var(--color1); */
  background-image: url(../images/flat-mountains.svg);
  background-size: cover;
  background-position: center;
  min-height: 60vh;
  width: 100%;
}

.about-card {
  padding: 0px 15px;
  margin: 0px 15px;
}

.icon {
  height: 40px;
  margin: 0px 5px;
}

.contact-card {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 15px;
  padding-top: 15px;
}

#contact {
  text-align: center;
  text-decoration: underline;
  text-underline-offset: 5px;
  text-decoration-color: var(--color3);
  text-decoration-thickness: 2px;
  background-color: var(--color3);
}

#contact h3 {
  margin: 0;
  padding-top: 15px;
}

.section-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 30px;
}

.login {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 300px;
  width: 250px;
  background-image: linear-gradient(to right top, #228b22, #008d59, #008b80, #008697, #327f9b);
  border-radius: 10px;
  margin-top: 10%;
  box-shadow: 5px 5px 6px -1px #AAA;
}

.login input {
  width: 80%;
  margin-left: 10%;
  min-width: 150px;
}

.login label {
  margin-left: 10%;
}

.login li {
  list-style: none;
  padding: 0;
  font-size: .8rem
}

.login h1 {
  margin: 0;
}

.title {
  margin-top: -5vh;
  margin-bottom: 5vh;
  text-align: center;
}

.subtitle {
  margin-top: 5vh;
  text-align: center;
}

.about-card h1, .about-card p {
  background-color: rgba(50, 50, 50, .5);
  padding: 10px;
  border-radius: 5px;
  max-width: 1000px;
}

